<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_activity"
    android:orientation="vertical"
    android:background="@drawable/background">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30sp"
            android:text="@string/app_name"
            android:textSize="27sp"
            android:textStyle="italic|bold"
            android:textColor="@color/white"
            android:gravity="center"
 />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/message_bienvenue"
            android:textSize="18sp"
            android:textStyle="italic|bold"
            android:textColor="@color/orange_200"
            android:gravity="center"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/bonjour"
                            android:textColor="@color/orange_500"
                            android:textSize="20sp"
                            android:textStyle="bold"
                                />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/ask_name"
                            android:textColor="@color/orange_500"
                            android:textSize="15sp"
                            />
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                >

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/et_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prenom"
                                    android:textColorHint="@android:color/darker_gray"
                                    android:textColor="@color/black" />
                                        


                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btn_start"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@color/orange_200"
                            android:text="@string/demarrer"
                            android:textColor="@color/white"
                            />
                </LinearLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>